fix the bugs in alignments of all the components

--- a/src/app/pages/modules/cams-new/users-view/users-view.component.scss
+++ b/src/app/pages/modules/cams-new/users-view/users-view.component.scss
@@ -1,9 +1,3 @@
-h5{
-    text-align: center;
-    margin-top: 3%;
-    margin-bottom: 2%;
-}
-
 @media only screen and (max-width: 600px) {
     h2 {
       font-size: 15px;
